Fixed page title cutoff at small device sizes

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -289,6 +289,8 @@
 	ul#header-menu { left: 0; margin-top: 0; }
 	ul#header-menu li.last a { color: #333; text-align: center; }
 	
+	.subpage .page-content #page_title h1 { width: 100%; }
+	
 	#subheader { display: none; }
 	
 	#home .span12 { margin-bottom: 10px; margin-top: 0; }
